2004-10-24  Michael Gogins <gogins@pipeline.com>

	* Fixes to rtpa.c and pa_callback.c for duplex audio, and
	libsnd_u.c forsoundfile input, by Victor Lazzarini.

	* CsoundVST changes directory to that of loaded files.

2004-11-07  John ffitch  <jpff@codemist.co.uk>

	* H/ftgen.h (GENMAX): set to 43 (really part is fgens below)

2004-11-06  John ffitch  <jpff@codemist.co.uk>

	* Engine/musmon.c (sensevents): Need to reset nxtim and nxtbt at
	end of section (not needed in playevents model)

2004-11-05  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/pvsbasic.c: New file and opcodes

	* Engine/fgens.c: Added gen43

2004-11-02  John Fitch  <jpff@eriboll.local.>

	* Top/threads.c: OSX threads like Linux

	* InOut/rtpa.c: Use callback stuff for OSX

2004-10-24  Michael Gogins <gogins@pipeline.com>

	* Renamed libsndfile.dll.0.0.19.

	* Updated documentation to provide improved directions for extending
	Csound with builtin or plugin opcodes.

	* Fixed badly formatted tables in documentation.

	* Improved API documentation with simple examples.

2004-10-26  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugrw1.c: Simplified some of the error reporting

	* H/ugrw1.h (zkwm): and remove value from domix

2004-10-25  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (cmbset): Round rather than truncate

2004-10-24  Michael Gogins <gogins@pipeline.com>

	* Updated build system for gcc 3.4.2 (candidate), changed some
	flags to avoid DLL relocation errors on Windows that caused
	problems with restarting CsoundVST, and with debugging.

	* First draft of complete Csound 5 manual with Kevin Conder
	documentation included.  There are as yet many errors with tables
	and graphics, but all (or almost all) of the text appears to be
	good.

2004-10-21  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (delset, delrset): Round not truncate
	(deltap): Round not truncate

2004-10-20  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (delrset): NULL list of delays for safety, 
